# 2023-switch-lab

./: .gitignore  CMakeLists.txt  README.md  switch.cc  switch.h
.github/classroom/: autograding.json
src/: simulator.cc  switch.cxx  switch.hxx  types.hxx
